// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackPanel should render feedback panel correctly with initial feedbacks 1`] = `
<body>
  <div>
    <div
      class="css-1ia503z"
    >
      <div
        class="feedback-section-title"
      >
        评估反馈
      </div>
      <div
        class="css-1hhgau3"
      >
        <div
          class="submitted-view agree"
        >
          <div
            class="submitted-header"
          >
            <span
              class="vote-icon"
            >
              <svg
                color="currentColor"
                height="16"
                viewBox="0 0 20 20"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="vote-label agree"
            >
              通过
            </span>
            <button
              class="re-edit-btn"
            >
              <svg
                color="currentColor"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class="submitted-reason"
          >
            优化效果明显
          </div>
          <div
            class="submitted-time"
          >
            <span
              class="time-icon"
            >
              <svg
                color="currentColor"
                height="11"
                viewBox="0 0 18 18"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            2024-04-17 11:33:09
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal feedback-divider"
        role="separator"
      />
      <span
        class="ant-typography ant-typography-secondary review-records-title"
      >
        会审记录
      </span>
      <div
        class="css-ppohht"
      >
        <div
          class="feedback-card"
        >
          <div
            class="feedback-avatar"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-avatar ant-avatar-circle action-avatar css-6ssfc7"
                >
                  <span
                    class="ant-avatar-string"
                    style="transform: scale(1) translateX(-50%);"
                  >
                    A
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="feedback-card-body"
          >
            <div
              class="feedback-card-header"
            >
              <span
                class="creator-name"
              >
                admin
              </span>
              <span
                class="vote-badge agree"
              >
                通过
              </span>
              <span
                class="feedback-time"
              >
                2024-04-17 11:33:09
              </span>
            </div>
            <span
              class="ant-typography feedback-reason"
            >
              优化效果明显
            </span>
          </div>
          <button
            class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous basic-button-wrapper css-10ae2zl"
            type="button"
          >
            <span>
              删 除
            </span>
          </button>
        </div>
        <div
          class="feedback-card"
        >
          <div
            class="feedback-avatar"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-avatar ant-avatar-circle action-avatar css-6ssfc7"
                >
                  <span
                    class="ant-avatar-string"
                    style="transform: scale(1) translateX(-50%);"
                  >
                    U
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="feedback-card-body"
          >
            <div
              class="feedback-card-header"
            >
              <span
                class="creator-name"
              >
                user1
              </span>
              <span
                class="vote-badge disagree"
              >
                不行
              </span>
              <span
                class="feedback-time"
              >
                2024-04-16 18:00:00
              </span>
            </div>
            <span
              class="ant-typography feedback-reason"
            >
              性能提升不明显
            </span>
          </div>
        </div>
        <div
          class="feedback-card"
        >
          <div
            class="feedback-avatar"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-avatar ant-avatar-circle action-avatar css-6ssfc7"
                >
                  <span
                    class="ant-avatar-string"
                    style="transform: scale(1) translateX(-50%);"
                  >
                    U
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="feedback-card-body"
          >
            <div
              class="feedback-card-header"
            >
              <span
                class="creator-name"
              >
                user2
              </span>
              <span
                class="vote-badge agree"
              >
                通过
              </span>
              <span
                class="feedback-time"
              >
                2024-04-15 16:00:00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeedbackPanel should render feedback panel with empty feedbacks 1`] = `
<body>
  <div>
    <div
      class="css-1ia503z"
    >
      <div
        class="feedback-section-title"
      >
        评估反馈
      </div>
      <div
        class="css-1hhgau3"
      >
        <div
          class="vote-buttons"
        >
          <button
            class="vote-tile-btn "
          >
            <span
              class="vote-btn-icon"
            >
              <svg
                color="currentColor"
                height="22"
                viewBox="0 0 1024 1024"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="vote-btn-text"
            >
              通过
            </span>
          </button>
          <button
            class="vote-tile-btn "
          >
            <span
              class="vote-btn-icon"
            >
              <svg
                color="currentColor"
                height="22"
                viewBox="0 0 16 16"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="vote-btn-text"
            >
              不行
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal feedback-divider"
        role="separator"
      />
      <span
        class="ant-typography ant-typography-secondary review-records-title"
      >
        会审记录
      </span>
      <div
        class="css-ppohht"
      >
        <div
          class="no-records"
        >
          暂无反馈记录
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeedbackPanel should render without onFeedbackChanged prop 1`] = `
<body>
  <div>
    <div
      class="css-1ia503z"
    >
      <div
        class="feedback-section-title"
      >
        评估反馈
      </div>
      <div
        class="css-1hhgau3"
      >
        <div
          class="vote-buttons"
        >
          <button
            class="vote-tile-btn "
          >
            <span
              class="vote-btn-icon"
            >
              <svg
                color="currentColor"
                height="22"
                viewBox="0 0 1024 1024"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="vote-btn-text"
            >
              通过
            </span>
          </button>
          <button
            class="vote-tile-btn "
          >
            <span
              class="vote-btn-icon"
            >
              <svg
                color="currentColor"
                height="22"
                viewBox="0 0 16 16"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="vote-btn-text"
            >
              不行
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal feedback-divider"
        role="separator"
      />
      <span
        class="ant-typography ant-typography-secondary review-records-title"
      >
        会审记录
      </span>
      <div
        class="css-ppohht"
      >
        <div
          class="no-records"
        >
          暂无反馈记录
        </div>
      </div>
    </div>
  </div>
</body>
`;
